# arachne

./: .gitignore  README.md  pyproject.toml
app/: app.py  gradio_app.py
arachne/: __init__.py  config.py  constants.py
arachne/data/: loader.py  preprocessing.py  s3.py
arachne/features/: extractors.py
arachne/models/: __init__.py  base.py  classical.py  transformer.py
arachne/tracking/: tracker.py
arachne/training/: evaluator.py  trainer.py
configs/: base.yaml
configs/experiments/: camembert.yaml  ensemble_vote.yaml  entetes_seuls_logistic.yaml  features_explicites_logistic.yaml  lemmatisation_logistic.yaml  lightgbm.yaml  tfidf_chars.yaml  tfidf_complement_nb.yaml  tfidf_gradient_boosting.yaml  tfidf_logistic.yaml  tfidf_random_forest.yaml  tfidf_separe_logistic.yaml  tfidf_svm.yaml  xgboost.yaml
production/: __init__.py  _utils.py  classifieur.py  config_production.yaml  preprocesseur.py  tableau.py
scripts/: export_data.py  generer_donnees_test.py  train.py
